css/player.css
#analyser-container {
	display: flex;
	overflow: visible;
}

.analyser-bar {
	flex-grow: 1;
	height: 0px;
	background: #222;
	/* bar spacing
	margin: 0px 2px;
	*/
}

/* bar spacing
@media only screen and (max-width: 1400px) {
	.analyser-bar {
		margin: 0px 1px;
	}
}

@media only screen and (max-width: 900px) {
	.analyser-bar {
		margin: 0px 0px;
	}
}
*/

.nowplayingbox {
	display: none;
	position: relative;
	overflow: hidden;
	width: auto;
	height: 3rem;
	background: #181818;
	padding: 1rem;
	margin: 1rem;
	flex-grow: 1;
}

@keyframes playingscroll {
	0% {
		transform: translateX(100%) translateY(-50%);
	}
	100% {
		transform: translateX(-100%) translateY(-50%);
	}
}

.nowplaying {
	position: absolute;
	margin-bottom: 0.5rem;
	top: 50%;
	width: 100%;
	height: auto;
	transform: translateX(100%) translateY(-50%);
	animation: playingscroll 15s linear infinite;
	color: #cfcfcf;
	font-family: "Pixel";
	text-shadow: 0.07em 0.07em #696969;
	font-size: 1.2rem;
	white-space: nowrap;
}

.playerBox {
	box-shadow: 0 0 0.5rem 0.0rem rgba(0, 0, 0, 0.4);
	margin: 0.5rem 0;
}

@media only screen and (max-width: 900px) {
	.nowplayingbox {
		order: 50;
	}
}

.name {
    width: 60%;
  }
  .audio-player {
    height: 50px;
    width: 200px;
    background: #0D0D0D;
    font-family: arial;
    color: white;
    font-size: 0.75em;
    overflow: hidden;
    display: grid;
    grid-template-rows: 6px auto;
    
    /* make the WJTB text not selectable */

    -webkit-touch-callout: none; /* iOS Safari */
      -webkit-user-select: none; /* Safari */
        -khtml-user-select: none; /* Konqueror HTML */
          -moz-user-select: none; /* Old versions of Firefox */
            -ms-user-select: none; /* Internet Explorer/Edge */
              user-select: none; /* Non-prefixed version, currently
                                  supported by Chrome, Edge, Opera and Firefox *

  }
  .audio-player .timeline {
    background: #e92705d0;
    width: 100%;
    position: relative;
    cursor: pointer;
    /* box-shadow: 2px 2px 10px 0 #FFD700; */
  }
  .audio-player .timeline .progress {
    background: red;
    width: 100%;
    height: 100%;
    transition: 0.15s;
  }
  .audio-player .controls {
    display: flex;
    justify-content: space-between;
    align-items: stretch;
    padding: 0 20px;
  }
  .audio-player .controls > * {
    display: flex;
    justify-content: center;
    align-items: center;
  }
  .audio-player .controls .toggle-play.play {
    left: 0;
    height: 0;
    width: 0;
    border: 7px solid #0000;
    border-left: 13px solid white;
  }
  .audio-player .controls .toggle-play.pause {
    height: 15px;
    width: 20px;
  } 
  
  .toggle-play {
     cursor: pointer;
     position: relative;
     transition: transform 0.1s ease-in-out;
  }

  .toggle-play:hover,
  .toggle-play:focus {
    transform: scale(1.1);
  }

  .toggle-play:active {
    transform: scale(0.9);
  }

  .audio-player .controls .toggle-play.pause:before {
    position: absolute;
    top: 0;
    left: 0px;
    background: white;
    content: "";
    height: 15px;
    width: 3px;
  }
  .audio-player .controls .toggle-play.pause:after {
    position: absolute;
    top: 0;
    right: 8px;
    background: white;
    content: "";
    height: 15px;
    width: 3px;
  }
  .audio-player .controls .toggle-play.pause:hover ,
  .audio-player .controls .toggle-play.pause:focus {
    transform: scale(1.1);
  }
  .audio-player .controls .time {
    display: flex;
  }
  .audio-player .controls .time > * {
    padding: 2px;
  }
  .audio-player .controls .volume-container {
    cursor: pointer;
    position: relative;
    z-index: 2;
    color: white;
  }
  .audio-player .controls .volume-container .volume-button {
    height: 26px;
    display: flex;
    align-items: center;
    color: white;
  }
  
  .volume-button {
    transition: transform 0.1s ease-in-out;
  }

  .volume-button:hover ,
  .volume-button:focus {
	transform: scale(1.1);
  }

  .volume-button:active {
	transform: scale(0.9);
  }

  .audio-player .controls .volume-container .volume-button .volume {
    transform: scale(0.7);
    color: white;
  }
  .audio-player .controls .volume-container .volume-slider {
  	/* The volume slider background */
    position: absolute;
    left: 0%;
    top: 25%;
    z-index: -1;
    width: 0;
    height: 20px;
    background: #333333;
    box-shadow: 0 0 20px #000a;
    transition: 0.1s ease-in-out;
  }
  .audio-player .controls .volume-container .volume-slider .volume-percentage {
	/* The volume slider progress bar */
    background: #FFFFFF;
    height: 100%;
    width: 75%;
    box-shadow: 1x 1px 2px 0 white;
  }
  
  .audio-player .controls .volume-container .volume-slider.opened:not(.muted),
  .audio-player .controls .volume-container:hover .volume-slider:not(.muted),
  .audio-player .controls .volume-container:focus .volume-slider:not(.muted) {
	left: -100px;
	width: 100px;
  }

